generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  USER
}

model User {
  id        String  @id @default(uuid())
  email     String  @unique
  password  String
  firstName String
  lastName  String
  role      Role    @default(USER)
  isActive  Boolean @default(true)

  // ✅ back relations
  visitesCreees    Visite[] @relation("VisiteCreatedBy")
  visitesModifiees Visite[] @relation("VisiteUpdatedBy")

  formulairesCreees   Formulaire[]          @relation("FormCreatedBy")
  formulairesRemplis  Formulaire[]          @relation("FormFilledBy")
  formulairesSoumis   Formulaire[]          @relation("FormSubmittedBy")
  formulairesVerifies Formulaire[]          @relation("FormVerifiedBy")
  pathologiesAjoutees PersonnelPathologie[] @relation("PersonnelPathologieCreatedBy")
  createdAt           DateTime              @default(now())
  updatedAt           DateTime              @updatedAt
}

model Formation {
  id      String @id @default(uuid())
  code    String @unique
  libelle String

  services   Service[]
  personnels Personnel[]

  affectationHistory PersonnelAffectationHistory[] // <- inverse de PersonnelAffectationHistory.formation
  formulaires        Formulaire[] // <- inverse de Formulaire.formation (si tu gardes formationId dans Formulaire)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Service {
  id      String @id @default(uuid())
  code    String @unique
  libelle String

  formationId String
  formation   Formation @relation(fields: [formationId], references: [id])

  personnels Personnel[]
  bordereaux Bordereau[]

  // ✅ AJOUTER
  affectationHistory PersonnelAffectationHistory[] // <- inverse de PersonnelAffectationHistory.service
  formulaires        Formulaire[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Poste {
  id      String @id @default(uuid())
  code    String @unique
  libelle String

  personnels Personnel[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum PersonnelCategorie {
  SMR
  VP
}

model Personnel {
  id            String        @id @default(uuid())
  firstName     String
  lastName      String
  email         String?       @unique
  matricule     String?       @unique
  dateNaissance DateTime?
  statutSocial  StatutSocial?
  isActive      Boolean       @default(true)

  posteId String
  poste   Poste  @relation(fields: [posteId], references: [id])

  serviceId String
  service   Service @relation(fields: [serviceId], references: [id])

  formationId     String
  formation       Formation @relation(fields: [formationId], references: [id])
  dateAffectation DateTime?

  categorie    PersonnelCategorie            @default(VP)
  tags         String[]                      @default([])
  visites      Visite[]
  formulaires  Formulaire[]
  affectations PersonnelAffectationHistory[]
  convocations Convocation[]
  pathologies  PersonnelPathologie[]
  createdAt    DateTime                      @default(now())
  updatedAt    DateTime                      @updatedAt
}

// =========================
// HISTORIQUE DES AFFECTATIONS
// =========================

model PersonnelAffectationHistory {
  id String @id @default(uuid())

  personnelId String
  personnel   Personnel @relation(fields: [personnelId], references: [id])

  formationId String
  formation   Formation @relation(fields: [formationId], references: [id])

  serviceId String
  service   Service @relation(fields: [serviceId], references: [id])

  dateAffectation DateTime

  // provenance du changement
  formulaireId String?
  formulaire   Formulaire? @relation(fields: [formulaireId], references: [id])

  note String?

  createdAt DateTime @default(now())

  @@index([personnelId, dateAffectation])
}

model Convocation {
  id String @id @default(uuid())

  datePrevue   DateTime
  dateRealisee DateTime?

  statut ConvocationStatut @default(A_CONVOQUER)

  convocationType ConvocationType @default(INITIALE)

  dateConvocation DateTime?

  // ✅ lien vers bordereau (1 convocation ∈ 0..1 bordereau)
  bordereauId String?
  bordereau   Bordereau? @relation(fields: [bordereauId], references: [id])

  // ✅ texte libre
  commentaire String?

  personnelId String
  personnel   Personnel @relation(fields: [personnelId], references: [id])

  visite    Visite?  @relation
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([personnelId, datePrevue])
  @@index([statut])
}

model Visite {
  id     String       @id @default(uuid())
  type   VisiteType
  statut VisiteStatut @default(BROUILLON)

  dateDebut DateTime  @default(now())
  dateFin   DateTime?

  personnelId String
  personnel   Personnel @relation(fields: [personnelId], references: [id])

  convocationId String?      @unique
  convocation   Convocation? @relation(fields: [convocationId], references: [id])

  formulaire Formulaire?

  // ✅ AUDIT
  createdById String
  createdBy   User   @relation("VisiteCreatedBy", fields: [createdById], references: [id])

  updatedById String?
  updatedBy   User?   @relation("VisiteUpdatedBy", fields: [updatedById], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([personnelId, dateDebut])
  @@index([statut])
  @@index([type])
}

model Formulaire {
  id String @id @default(uuid())

  visiteId String? @unique
  visite   Visite? @relation(fields: [visiteId], references: [id])

  personnelId String
  personnel   Personnel @relation(fields: [personnelId], references: [id])

  statut        FormulaireStatut @default(DRAFT)
  schemaVersion Int              @default(1)

  // quelles sections sont actives (pilotées par le front selon type visite)
  sectionsEnabled FormSectionKey[] @default([INFORMATIONS_GENERALES, INFORMATIONS_PROFESSIONNELLES])

  // -------------------------
  // Snapshot - Infos générales
  // -------------------------
  // (tu peux en garder plus si besoin)
  snapshotFirstName String?
  snapshotLastName  String?
  snapshotMatricule String? // identifiant interne (si tu en ajoutes un côté Personnel)
  dateNaissance     DateTime?
  statutSocial      StatutSocial?
  // si tu veux rester libre:
  // statutSocialTexte    String?

  // -------------------------
  // Snapshot - Infos pro
  // -------------------------
  aTravailleHorsCHUIR Boolean? // question Oui/Non
  autreLieuTravail    String?
  autreDureeAnnees    Int?
  autreHoraires       String?

  serviceId String?
  service   Service? @relation(fields: [serviceId], references: [id])

  dateAffectation DateTime?

  // ... le reste de tes champs (snapshot, data, sectionsEnabled, etc.)
  pathologies        PersonnelPathologie[]
  affectationHistory PersonnelAffectationHistory[]

  // -------------------------
  // Réponses libres par sections
  // (JSON flexible : antécédents, examen, etc.)
  // -------------------------
  data Json?

  // Flags de propagation
  // (utile si tu veux tracer si le formulaire a mis à jour Personnel)
  propagatedToPersonnelAt DateTime?

  // ✅ AUDIT
  createdById String
  createdBy   User   @relation("FormCreatedBy", fields: [createdById], references: [id])

  filledById String?
  filledBy   User?   @relation("FormFilledBy", fields: [filledById], references: [id])

  submittedById String?
  submittedBy   User?   @relation("FormSubmittedBy", fields: [submittedById], references: [id])

  submittedAt  DateTime?
  verifiedById String?
  verifiedBy   User?     @relation("FormVerifiedBy", fields: [verifiedById], references: [id])

  verifiedAt DateTime?

  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
  formation   Formation? @relation(fields: [formationId], references: [id])
  formationId String?
}

model JourFerie {
  id    String   @id @default(uuid())
  date  DateTime @unique
  label String? // ex: "Fête du Travail", "Aid Al Adha"

  createdAt DateTime @default(now())

  @@index([date])
}

enum VisiteType {
  ANNUELLE
  RAPPROCHEE
}

enum ConvocationStatut {
  A_CONVOQUER // pas encore traité
  CONVOCATION_GENEREE // convocation générée (pdf/email prêt)
  A_TRAITER // retour/présence à vérifier, ou action attendue
  A_RELANCER // échec/no-show => doit être relancé
  RELANCEE // relance envoyée
  REALISEE
  ANNULEE // convocation effectuée
}

enum ConvocationType {
  INITIALE
  RELANCE_1
  RELANCE_2
  RELANCE_3
}

enum BordereauStatut {
  NOUVEAU
  GENERE
}

model Bordereau {
  id        String  @id @default(uuid())
  serviceId String
  service   Service @relation(fields: [serviceId], references: [id])

  dateEdition  DateTime @default(now()) // date d’édition du bordereau
  serialNumber String   @unique // numéro auto

  statut BordereauStatut @default(NOUVEAU)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  convocations Convocation[] // via convocation.bordereauId
}

enum Cim11Level {
  L1
  L2
  L3
  L4
  L5
}

model Cim11Node {
  id      String     @id @default(uuid())
  code    String     @unique
  libelle String
  level   Cim11Level

  parentId String?
  parent   Cim11Node?  @relation("Cim11Parent", fields: [parentId], references: [id])
  children Cim11Node[] @relation("Cim11Parent")

  // utile pour filtrer rapidement (ex: pathologies sélectionnables seulement si feuille)
  isLeaf Boolean @default(false)

  // optionnel : garder la “trace” des codes L1..L5 de ta source
  pathCodes   String[]              @default([]) // ex: ["Niveau1-2","BlockL1-2A0","2A00","2A00.1","2A00.10"]
  pathologies PersonnelPathologie[]
  createdAt   DateTime              @default(now())
  updatedAt   DateTime              @updatedAt

  @@index([level])
  @@index([parentId])
  @@index([libelle])
}

model PersonnelPathologie {
  id String @id @default(uuid())

  personnelId String
  personnel   Personnel @relation(fields: [personnelId], references: [id])

  cim11NodeId String
  cim11       Cim11Node @relation(fields: [cim11NodeId], references: [id])

  // provenance (facultatif)
  formulaireId String?
  formulaire   Formulaire? @relation(fields: [formulaireId], references: [id])

  // métadonnées demandées
  date        DateTime @default(now())
  commentaire String?
  source      String? // champ libre (ex: "certificat Dr X", "dossier médical", etc.)

  // audit
  createdById String
  createdBy   User   @relation("PersonnelPathologieCreatedBy", fields: [createdById], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // évite doublon exact pour un même personnel (tu peux adapter)
  @@unique([personnelId, cim11NodeId, date])
  @@index([personnelId, date])
  @@index([cim11NodeId])
  @@index([formulaireId])
}

enum VisiteStatut {
  BROUILLON
  EN_COURS
  CLOTUREE
  ANNULEE
}

enum FormulaireStatut {
  DRAFT
  SUBMITTED
  VERIFIED
}

enum FormSectionKey {
  INFORMATIONS_GENERALES
  INFORMATIONS_PROFESSIONNELLES
  ANTECEDENTS
  RENSEIGNEMENTS_PROFESSIONNELS
}

enum StatutSocial {
  CELIBATAIRE
  MARIE
  DIVORCE
  VEUF
}
